--- a/package.json
+++ b/package.json
@@ -36,3 +36,9 @@
     "vite": "^5.4.2"
   }
 }
+"scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "deploy": "gh-pages -d dist"
+}
